# gmbm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  premake5.lua
src/cli/: mod.rs
src/cli/commands/: build.rs  clone.rs  init.rs  install.rs  mod.rs  verify.rs
src/pkg/: build.rs  clone.rs  init.rs  mod.rs  process.rs
src/pkg/cli/: commands.rs  mod.rs
src/pkg/cli/commands/: build.rs  clone.rs  init.rs  install.rs  verify.rs
src/util/: mod.rs
