[package]
name = "gmbm"
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.22"

# cli
clap = "3.0.0-beta.4"
colored = "2.0.0"

# targets
cc = "1.0.69" # Compiling C++, Using windows tools

# misc
pelite = "0.9.0"
url = "2.2.2"
anyhow = "1.0.44"
thiserror = "1.0.29"

# package file handling
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"