[package]
name = "gmbm"
authors = ["Vurv78 <vurvdevelops@gmail.com>"]
description = "CLI to manage and download garrysmod binary modules"
version = "0.6.0"
repository = "https://github.com/Vurv78/gmbm"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gmbm"

[lib]
crate-type = ["rlib"]

[dependencies]
git2 = "0.13.25"

# cli
clap = { version = "3.0.0-rc.4", features = ["cargo"] }
colored = "2.0.0"

# targets
cc = "1.0.69" # Compiling C++, Using windows tools

# misc
pelite = "0.9.0"
url = "2.2.2"
thiserror = "1.0.29"

# package file handling
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"